--- a/views/about.pug
+++ b/views/about.pug
@@ -7,14 +7,11 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
         h1 Billy Pham
 
-        //- Feel free personalize the title below
         p.lead.text-light
           | Full Stack JavaScript Developer.
 
-        //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
             | I am in Full Stack training at Treehouse
@@ -22,7 +19,6 @@ block content
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li Express
           li JavaScript
@@ -35,14 +31,12 @@ block content
 
         h6 Contact Info
 
-        //- Add your own contact info
         ul
-          li 722-222-1111
-          li billy.pham@gmail.com
+          li Cellphone: 722-222-1111
+          li Email: billy1234@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
         a.button.expanded(href='https://www.linkedin.com/in/billy-p-a1690bb6/') LinkedIn
         a.button.expanded(href='https://github.com/NPHAM12') GitHub
-        //a.button.expanded(href='') Twitter
+  
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
